base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-deployment
  template:
    metadata:
      labels:
        app: my-deployment
    spec:
      containers:
        - name: my-app-container
          image: us-central1-docker.pkg.dev/tourtimegolf/tt-api/tt-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
