base/service.yaml
# Service YAML
apiVersion: v1 
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: Node.js
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-service
  type: LoadBalancer
status:
  loadBalancer: {}
