base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-api-dev
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
  name: ingress-app
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: api-dev.tt.golf
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-deployment
                port:
                  number: 80
  tls:
    - hosts:
        - api-dev.tt.golf
      secretName: ingress-app
